gitops/apps/envoy-gateway-resources/httproute-ntopng.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntopng
  namespace: envoy-gateway-system
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - "ntopng.homelab.local"
  rules:
  - backendRefs:
    - name: ntopng
      namespace: ntopng
      port: 3000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: ntopng-backend
  namespace: ntopng
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: envoy-gateway-system
  to:
  - group: ""
    kind: Service
    name: ntopng
